feat: add membership check before generating weather code